--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.button {
+  background-color: #1c87c9;
+  -webkit-border-radius: 60px;
+  border-radius: 60px;
+  border: none;
+  color: #eeeeee;
+  cursor: pointer;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  animation: glowing 1300ms infinite;
+}
+@keyframes glowing {
+  0% {
+    background-color: #c00f0f;
+    box-shadow: 0 0 5px #ff011e;
+  }
+  50% {
+    background-color: #c00202;
+    box-shadow: 0 0 20px #ff0000;
+  }
+  100% {
+    background-color: #c60000;
+    box-shadow: 0 0 5px #f10202;
+  }
+}
