--- a/src/Map.css
+++ b/src/Map.css
@@ -1,20 +1,23 @@
 .map-container {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 30vw;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1vh;
+    /* margin-left: 25vw; */
+    display: flex;
+    width: 100vw;
     height: 40vh;
   }
   
   .sidebarStyle {
     display: inline-block;
     position: absolute;
-    top: 0;
+    justify-content: flex-start;
+    display: flex;
+    top: 4;
     left: 0;
-    margin: 12px;
-    background-color: #404040;
+    margin: 6px;
+    background-color:#01579B;
     color: #ffffff;
     z-index: 1 !important;
     padding: 6px;
