--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,9 @@ code {
   padding: 5px 15px;
   text-align: center;
   text-decoration: none;
-  animation: glowing 1300ms infinite;
+  animation: glowing1 1300ms infinite;
 }
-@keyframes glowing {
+@keyframes glowing1 {
   0% {
     background-color: #c00f0f;
     box-shadow: 0 0 5px #ff011e;
@@ -39,5 +39,34 @@ code {
   100% {
     background-color: #c60000;
     box-shadow: 0 0 5px #f10202;
+  }
+}
+.prog {
+  background-color: #1c87c9;
+  -webkit-border-radius: 60px;
+  border-radius: 60px;
+  border: none;
+  color: #eeeeee;
+  cursor: pointer;
+  display: inline-block;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 5px 15px;
+  text-align: center;
+  text-decoration: none;
+  animation: glowing 1300ms infinite;
+}
+@keyframes glowing {
+  0% {
+    background-color: #19f211;
+    box-shadow: 0 0 5px #097807;
+  }
+  50% {
+    background-color: #1bae4c;
+    box-shadow: 0 0 20px #34c70f;
+  }
+  100% {
+    background-color: #2ddf19;
+    box-shadow: 0 0 5px #1dbe30;
   }
 }
